fix: increase hero height and remove aspect ratio to prevent long sentances from being cut off on small devices

--- a/assets/scss/components/_container.scss
+++ b/assets/scss/components/_container.scss
@@ -2,12 +2,13 @@
   margin-left: auto;
   margin-right: auto;
   max-width: 960px;
+  padding: calc(var(--space) *4);
 }
 
 .container-wide {
   margin-left: auto;
   margin-right: auto;
-  padding: calc(var(--space) *4);
+  padding-inline: calc(var(--space) *4);
   max-width: 1500px;
 }
 
