--- a/assets/scss/components/_hero.scss
+++ b/assets/scss/components/_hero.scss
@@ -12,8 +12,7 @@
 
 .hero--banner-image {
  img {
-  aspect-ratio: 16/9;
-  max-height: 500px;
+  max-height: 600px;
   object-fit: cover;
  }
 
